[tool.poetry]
name = "avatarian"
version = "0.1.0"
description = ""
authors = ["Mat'z"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^74.1.2"
opencv-python = "^4.10.0.84"
face-recognition = "^1.3.0"
pyautogui = "^0.9.54"
pygetwindow = "^0.0.9"
imageio = "^2.35.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
